blog sub heading alignment fix

--- a/src/css/postlist.module.css
+++ b/src/css/postlist.module.css
@@ -20,3 +20,7 @@
   margin: 0 auto;
   max-width: 750px;
 }
+
+h3 {
+  text-align: center;
+}
